--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <div class="input-group">
             <label>Patient Weight (kg):</label>
-            <input type="number" id="weight" min="3" max="30" step="0.1">
+            <input type="number" id="weight" min="3" max="30" step="0.1" placeholder="Enter weight">
         </div>
 
         <div class="input-group">
@@ -48,6 +48,7 @@
 
         <div class="samples-section">
             <h3>Required Samples for Selected Visit:</h3>
+            <button id="selectAll">Select All Samples</button>
             <div id="visitSamples"></div>
         </div>
 
@@ -56,6 +57,7 @@
             <div>Maximum Allowed (single visit): <span id="maxAllowed">0</span> ml</div>
             <div>Maximum Allowed (28 days): <span id="maxAllowed28">0</span> ml</div>
             <div id="warningMessage"></div>
+            <div id="sampleBreakdown"></div>
         </div>
     </div>
     <script src="script.js"></script>
