--- a/index.html
+++ b/index.html
@@ -63,3 +63,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+git add .
+git commit -m "Updated calculator files"
+git push origin main
